mobile.css
body{
    display:grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;
    grid-template-areas:
    "header"
    "nav"
    "main"
    "footer";
    background-color: rgb(16, 26, 117);
}

.hamburger-menu {
    height: 0.8em;
    width: 1.25em;
    display: block;
    border-top: 0.2em solid white;
    border-bottom: 0.2em solid white;
    margin: 1em;
}



.hamburger-menu::before{
    content: '';
    position: absolute;
    width: 1.25em;
    margin-top: 0.3em;
    border-top: 0.2em solid white;
}



.header{
    background-color: rgb(9, 9, 122);
    color: white;
    grid-area: header;
   

}

.nav-links{
    gap: 1em;
    list-style: none;
    font-size: 0.8em;
}

.main{
    display: block;
}

.image{
    width: 300px;
    height: 400px;
    border-radius: 20px;
    position: relative;
    z-index: 2;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 40px;
}

.boxborder{
    position: relative;
    height: 400px;
    width: 300px;
    justify-content: center;
    align-items:center ;
    background-color: black;
    overflow: hidden;
    border-radius:20px;
    display: flex;
    z-index: 2;
    left: 40px;
    bottom: 100px;

}

.boxborder::before{
    content: '';
    position: absolute;
    width: 180px;
    height: 140%;
    background-color: rgb(255, 221, 0);
    box-shadow: 0 0 20px rgb(0, 0, 0);
    animation: animate 4s linear infinite;
    

}

.boxborder::after{
    content: '';
    position: absolute;
    inset: 10px;
    background-color: rgb(219, 230, 0);
    border-radius: 16px;
}

 nav li:first-child{
    margin-right: auto;
 }

 .sidebar{
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index:999;
    background-color: rgb(255, 255, 255,0.50);
    backdrop-filter:  blur(10px);
    box-shadow: -10px 0 10px black;
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;

    

 }

 .sidebar li{
    width: 100%;
    gap: 1em;
    list-style: none;
    font-size: 0.8em;
    display: block;

 }
 .sidebar a{
    width: 100%;
    justify-items: center;
    font-size: 3em;
    
 }

 .logo{
    display: none;
 }


#clicked .on {
    display: block;
}

#clicked .off{
    display: none;

}
#clicked:target .on{
    display: none;
}

#clicked:target .off{
    display: block;
}

#clicked:target .sidebar{
    display: block;

}
   

